--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pwa-complete-guide",
+  "name": "pwa-boilerplate",
   "version": "1.0.0",
   "description": "Building a simple Instagram clone.",
   "main": "index.js",
