--- a/public/manifest.json
+++ b/public/manifest.json
@@ -18,7 +18,7 @@
       "sizes": "144x144"
     },
     {
-      "src": "/src/images/icons/app-icon-192x192png",
+      "src": "/src/images/icons/app-icon-192x192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
